# neural-network-c

./: .clang-format  CMakeLists.txt  README.md
network/: main.c
network/lib/include/: back_propagation.h  hidden_layer.h  layer.h  matrix.h  neural_network.h  node.h  nodes.h  vector.h  weights.h
network/lib/src/: hidden_layer.c  matrix.c  neural_network.c  neural_network.h  nodes.c  vector.c
tests/matrices/: matrix_insert.c
tests/vectors/: vector_add.c  vector_insert.c
